--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -17,9 +17,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "imagekit": "^6.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9"
   }
 }
